force-app/main/default/objects/GazetteerProperty__c/GazetteerProperty__c.object-meta.xml
<CustomObject>
    <description>Gazetteer property reference keyed by UPRN.</description>
    <label>Gazetteer Property</label>
    <nameField>
        <displayFormat>GP-{00000}</displayFormat>
        <label>Property Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gazetteer Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>