force-app/main/default/objects/GazetteerProperty__c/fields/UPRN__c.field-meta.xml
<CustomField>
    <fullName>UPRN__c</fullName>
    <description>Unique Property Reference Number.</description>
    <externalId>true</externalId>
    <label>UPRN</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>